# neat

./: .gitignore  LICENSE  pyproject.toml
neat/neat/: asgi.py  settings.py  urls.py  wsgi.py
neat/presentations/: admin.py  models.py
neat/presentations/migrations/: 0001_initial.py  0002_alter_presentation_embed_url_and_more.py  0003_presentation_title.py
neat/screens/: admin.py  models.py  urls.py  views.py
neat/screens/migrations/: 0001_initial.py  0002_presentationslot_active.py
neat/screens/templates/screens/: main-screen-base.html  main-screen-embed.html  main-screen-pdf.html  main-screen.html  no-active-presentation.html  presenter-screen.html  test-drive.html
neat/screens/templates/screens/embed/: presentation.html  script.js  style.css
neat/screens/templates/screens/pdf/: script.js  style.css
